--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <title>当サービスは終了しました。</title>
 </head>
 <body>
+    <h1>当サービスは終了しました。</h1>
   <p>長年のご利用ありがとうございました。</p>
+  <img src="thankyou.png" alt="">
 </body>
 </html>
